# RAG_Optimizer

./: .gitignore  README.md  bm25_cache.json  docker-compose.yml  package-lock.json  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py  models.py
backend/app/pipelines/: evaluator.py  hybrid_retriever.py  query_rewriter.py  reranker.py  semantic_cache.py  traditional_rag.py  vectorless_rag.py
backend/app/routers/: ingest.py  query.py
backend/tests/: Vecless.ipynb
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  template.tsx
frontend/src/app/evaluate/: page.tsx
frontend/src/components/evaluate/: DropZone.tsx  EvaluateForm.tsx  LoadingState.tsx
frontend/src/components/home/: HeroSection.tsx  HowItWorks.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/results/: ComparisonChart.tsx  MetricsRow.tsx  PipelineCard.tsx  RecommendationCard.tsx  ResultsPanel.tsx
frontend/src/components/ui/: accordion.tsx
frontend/src/hooks/: useEvaluate.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
