[project]
name = "rag-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb==0.5.15",
    "fastapi==0.115.0",
    "google-generativeai==0.8.3",
    "groq>=1.1.2",
    "httpx==0.27.2",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langchain-core>=0.3.63",
    "langchain-google-genai==2.0.4",
    "langchain-groq",
    "langchain-text-splitters>=0.3.8",
    "marker>=2.1.3",
    "numpy>=2.4.4",
    "pydantic>=2.13.0",
    "pymupdf>=1.27.2.2",
    "pypdf==5.0.1",
    "pytest==8.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.12",
    "rank-bm25==0.2.2",
    "sentence-transformers==3.1.1",
    "uvicorn==0.30.6",
]
